force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
  <label>Appointment</label>
  <pluralLabel>Appointments</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Appointment #</label>
    <displayFormat>APT-{00000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>