force-app/main/default/objects/Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
  <fullName>Patient__c</fullName>
  <label>Patient</label>
  <referenceTo>Patient__c</referenceTo>
  <relationshipLabel>Appointments</relationshipLabel>
  <relationshipName>Appointments</relationshipName>
  <required>true</required>
  <type>Lookup</type>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>