force-app/main/default/objects/Appointment__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
      <value><fullName>Checked-In</fullName><default>false</default><label>Checked-In</label></value>
      <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
      <value><fullName>No-Show</fullName><default>false</default><label>No-Show</label></value>
      <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>